--- a/index.html
+++ b/index.html
@@ -164,8 +164,60 @@
           </div>
         </div>
       </div>
-      
 
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1" id="szamolasok">Számolás</span>
+        </div>
+      </nav>
+
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne3" aria-expanded="true" aria-controls="collapseOne2">
+              Számtani sorozat
+            </button>
+          </h2>
+          <div id="collapseOne3" class="accordion-collapse collapse show" data-bs-parent="#accordion2">
+            <div class="accordion-body">
+              <form>
+                <label for="szt_a1">a<sub>1</sub> = </label><input type="number" name="szt_a1" id="szt_a1"><br>
+                <label for="szt_d">d = </label><input type="number" name="szt_d" id="szt_d"><br>
+                <label for="szt_n">n = </label><input type="number" name="szt_n" id="szt_n"><br>
+                <input type="button" value="SZÁMOLÁS" id="szt_szamol">
+              </form>
+              <i>n</i>-edik elem: a<sub>n</sub> = <span id="szt_an"></span><br>
+              Összeg: S<sub>n</sub> = <span id="szt_Sn"></span><br>
+              Átlag: A = <span id="szt_atlag"></span><br>
+              Szórás: &sigma; = <span id="szt_szoras"></span>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo3" aria-expanded="false" aria-controls="collapseTwo2">
+              Mértani sorozat
+            </button>
+          </h2>
+          <div id="collapseTwo3" class="accordion-collapse collapse" data-bs-parent="#accordion2">
+            <div class="accordion-body">
+              Mértani sorozatok számításai ... 
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree3" aria-expanded="false" aria-controls="collapseThree2">
+              Kamatos kamat
+            </button>
+          </h2>
+          <div id="collapseThree3" class="accordion-collapse collapse" data-bs-parent="#accordion2">
+            <div class="accordion-body">
+              Kamatos kamat számításai ...
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/szamtani.js"></script>
