--- a/index.html
+++ b/index.html
@@ -201,7 +201,14 @@
           </h2>
           <div id="collapseTwo3" class="accordion-collapse collapse" data-bs-parent="#accordion2">
             <div class="accordion-body">
-              Mértani sorozatok számításai ... 
+              <form>
+                <label for="mt_a1">a<sub>1</sub> = </label><input type="number" name="mt_a1" id="mt_a1"><br>
+                <label for="mt_q">q =  </label><input type="number" name="mt_q" id="mt_q"><br>
+                <label for="mt_n">n =  </label><input type="number" name="mt_n" id="mt_n"><br>
+                <input type="button" value="SZÁMOLÁS" id="mt_szamol">
+              </form>
+              <i>n</i>-edik elem: a<sub>n</sub> = <span id="mt_an"></span><br>
+              Összeg: S<sub>n</sub> = <span id="mt_Sn"></span><br> 
             </div>
           </div>
         </div>
@@ -213,7 +220,16 @@
           </h2>
           <div id="collapseThree3" class="accordion-collapse collapse" data-bs-parent="#accordion2">
             <div class="accordion-body">
-              Kamatos kamat számításai ...
+              <form>
+                <label for="kamatos_kamat_Tn">Tn = </label><input type="number" name="kamatos_kamat_Tn" id="kamatos_kamat_Tn"><br>
+                <label for="kamatos_kamat_T0">T0 =  </label><input type="number" name="kamatos_kamat_T0" id="kamatos_kamat_T0"><br>
+                <label for="kamatos_kamat_n">n =  </label><input type="number" name="kamatos_kamat_n" id="kamatos_kamat_n"><br>
+                <label for="kamatos_kamat_p">p =  </label><input type="number" name="kamatos_kamat_p" id="kamatos_kamat_p"><br>
+                <input type="button" value="SZÁMOLÁS" id="kk_szamol">
+              </form>
+              Kamatozott összeg: T<sub>n</sub> = <span id="kamatos_kamat_Tn_kiir"></span><br>
+              Kezdő összeg: T<sub>0</sub> = <span id="kamatos_kamat_T0_kiir"></span><br>
+              Kamatperiódusok száma: n = <span id="kamatos_kamat_n_kiir"></span><br>
             </div>
           </div>
         </div>
@@ -221,5 +237,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/szamtani.js"></script>
+    <script src="./js/mertani.js"></script>
 </body>
 </html>
