--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1" id="szamtani">Számtani sorozat</span>
+          <span class="navbar-brand mb-0 h1" id="szamtani" name="szamtani">Számtani sorozat</span>
         </div>
       </nav>
 
@@ -114,7 +114,7 @@
 
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1" id="mertani">Mértani sorozat</span>
+          <span class="navbar-brand mb-0 h1" id="mertani" >Mértani sorozat</span>
         </div>
       </nav>
 
@@ -195,7 +195,7 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo3" aria-expanded="false" aria-controls="collapseTwo2">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo3" aria-expanded="false" aria-controls="collapseTwo2" name="mertans">
               Mértani sorozat
             </button>
           </h2>
