--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#szamtani">Számtani</a>
+                <a class="nav-link" id="szamtanisz" aria-current="page" href="#szamtani">Számtani</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#mertani">Mértani</a>
